--- a/xpi/content/css/am_nowarnings.css
+++ b/xpi/content/css/am_nowarnings.css
@@ -5,8 +5,13 @@
 	#show-disabled-unsigned-extensions,
 	#detail-view .error,
 	#detail-view .warning,
-	.global-warning-container {
+	.global-warning-container{
 	  display: none;
+	}
+	
+	.legacy-warning,
+	.addon[legacy="true"] .legacy-warning{
+	  display: none !important;
 	}
    
 	.addon,
