--- a/xpi/content/css/linux/smallnavbutextra.css
+++ b/xpi/content/css/linux/smallnavbutextra.css
@@ -36,6 +36,13 @@
 	  -moz-image-region: rect(0, 54px, 18px, 36px) !important;
 	}
 	
+	#main-window[fx55plus="true"] #nav-bar #urlbar-container #back-button:not([cui-areatype="menu-panel"]) {
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar.png") !important;
+	}
+	#main-window[fx55plus="true"] #nav-bar #urlbar-container #back-button:not([cui-areatype="menu-panel"]):-moz-lwtheme-brighttext {
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar-inverted.png") !important;
+	}
+	
 	#navigator-toolbox #nav-bar #bookmarks-menu-button > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
 	  margin:4px 0 !important;
 	  padding:0px 0px !important;
