--- a/xpi/content/css/mac/invicons_navbarextra.css
+++ b/xpi/content/css/mac/invicons_navbarextra.css
@@ -4,6 +4,7 @@
 	
 	#nav-bar :-moz-any(#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_bookmarks-menu-toolbar-button,#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_go-button) .toolbarbutton-icon,
 	#nav-bar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button:not([starred]), #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #webrtc-status-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #ctraddon_preferences-button, #privatebrowsing-button, #save-page-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #web-apps-button,#webide-button,#containers-panelmenu),
+	#main-window[fx55plus="true"] #navigator-toolbox #nav-bar #urlbar-container #back-button:not([cui-areatype="menu-panel"]),
 	#nav-bar #panic-button:not([open]),
 	#nav-bar #pocket-button:not([open]),
 	#nav-bar #bookmarks-menu-button > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
@@ -67,6 +68,7 @@
 	@media (min-resolution: 2dppx) {
 
 	  #nav-bar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #webrtc-status-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #ctraddon_preferences-button, #privatebrowsing-button, #save-page-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #restore-button, #e10s-button, #web-apps-button,#webide-button,#containers-panelmenu),
+	  #main-window[fx55plus="true"] #navigator-toolbox #nav-bar #urlbar-container #back-button:not([cui-areatype="menu-panel"]),
 	  #nav-bar #panic-button:not([open]),
 	  #nav-bar #pocket-button:not([open]),
 	  #nav-bar #bookmarks-menu-button[cui-areatype="toolbar"] > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
