--- a/xpi/content/css/linux/back-forwardextra.css
+++ b/xpi/content/css/linux/back-forwardextra.css
@@ -50,12 +50,12 @@
 	  border-color: Highlight !important;
 	}
 
-	window:not([chromehidden~="toolbar"]) * toolbar #urlbar-container,
-	window:not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
+	#main-window:not([fx55plus="true"]):not([chromehidden~="toolbar"]) * toolbar #urlbar-container,
+	#main-window:not([fx55plus="true"]):not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
 	  -moz-margin-start: 4px !important;
 	}
-	#main-window[developertheme="true"]:not([chromehidden~="toolbar"]) * toolbar #urlbar-container,
-	#main-window[developertheme="true"]:not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
+	#main-window[developertheme="true"]:not([fx55plus="true"]):not([chromehidden~="toolbar"]) * toolbar #urlbar-container,
+	#main-window[developertheme="true"]:not([fx55plus="true"]):not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
 	  -moz-margin-start: 3px !important;
 	}
 
