--- a/xpi/content/css/mac/back-forwardextra.css
+++ b/xpi/content/css/mac/back-forwardextra.css
@@ -31,12 +31,12 @@
 	  transition: none !important;
 	}
 	
-	#main-window:not([chromehidden~="toolbar"]) * toolbar #urlbar-container ,
-	#main-window:not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled]  {
+	#main-window:not([fx55plus="true"]):not([chromehidden~="toolbar"]) * toolbar #urlbar-container ,
+	#main-window:not([fx55plus="true"]):not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled]  {
 	  -moz-margin-start: 8px !important;
 	}
-	#main-window[developertheme="true"]:not([chromehidden~="toolbar"]) * toolbar #urlbar-container,
-	#main-window[developertheme="true"]:not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
+	#main-window:not([fx55plus="true"])[developertheme="true"]:not([chromehidden~="toolbar"]) * toolbar #urlbar-container,
+	#main-window:not([fx55plus="true"])[developertheme="true"]:not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
 	  -moz-margin-start: 3px !important;
 	}
 
