--- a/xpi/content/css/winaero/back-forwardextra.css
+++ b/xpi/content/css/winaero/back-forwardextra.css
@@ -78,13 +78,13 @@
 	}
 	/* END: urlbar border tweaking (default theme does not provide left urlbar border) */
 	
-	#main-window:not([chromehidden~="toolbar"]) * toolbar #urlbar-container,
-	#main-window:not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
+	#main-window:not([fx55plus="true"]):not([chromehidden~="toolbar"]) * toolbar #urlbar-container,
+	#main-window:not([fx55plus="true"]):not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
 	  -moz-margin-start: 8px !important;
 	}
 	
-	#main-window[developertheme="true"]:not([chromehidden~="toolbar"]) * toolbar #urlbar-container,
-	#main-window[developertheme="true"]:not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
+	#main-window[developertheme="true"]:not([fx55plus="true"]):not([chromehidden~="toolbar"]) * toolbar #urlbar-container,
+	#main-window[developertheme="true"]:not([fx55plus="true"]):not([chromehidden~="toolbar"]) * toolbar #urlbar-container[forwarddisabled] {
 	  -moz-margin-start: 3px !important;
 	}
 	
