--- a/xpi/content/css/nocontextitems.css
+++ b/xpi/content/css/nocontextitems.css
@@ -8,5 +8,10 @@
 	  /*display: none !important;*/
 	  visibility: collapse !important;
 	}
+	
+	#toolbar-context-menu {
+	  /*display: none !important;*/
+	  visibility: collapse !important;
+	}
 
 }
