--- a/xpi/content/css/mac/overlayextra.css
+++ b/xpi/content/css/mac/overlayextra.css
@@ -76,19 +76,19 @@
 	
 	/* for Retina display */
 	@media (min-resolution: 2dppx) {
-		#main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button) {
+		#main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_bookmarks-menu-toolbar-button,#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button) {
 		  list-style-image: url("chrome://browser/skin/Toolbar@2x.png");
 		}
 		
-		#main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button):-moz-lwtheme-brighttext {
+		#main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_bookmarks-menu-toolbar-button,#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button):-moz-lwtheme-brighttext {
 		  list-style-image: url("chrome://browser/skin/Toolbar-inverted@2x.png");
 		}
 		
-		#main-window[defaultfxtheme="true"][fx55plus="true"]  :-moz-any(#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button) {
+		#main-window[defaultfxtheme="true"][fx55plus="true"]  :-moz-any(#ctraddon_bookmarks-menu-toolbar-button,#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button) {
 		  list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar@2x.png");
 		}
 		
-		#main-window[defaultfxtheme="true"][fx55plus="true"]  :-moz-any(#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button):-moz-lwtheme-brighttext {
+		#main-window[defaultfxtheme="true"][fx55plus="true"]  :-moz-any(#ctraddon_bookmarks-menu-toolbar-button,#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button):-moz-lwtheme-brighttext {
 		  list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar-inverted@2x.png");
 		}
 	  
