--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -204,8 +204,14 @@ radio.ctraddontab .radio-check-box1 {
 @media not all and (-moz-os-version: windows-win10) {
   #ctraddon_pw_transpttbw10,
   #ctraddon_pw_transptcw10,
-  #ctraddon_pw_locsearchbw10 {
+  #ctraddon_pw_locsearchbw10  {
 	visibility: collapse;
+  }
+}
+
+@media all and (-moz-os-version: windows-win10) {
+  #ctraddon_pw_locsearchbw10 {
+	visibility: visible !important;
   }
 }
 
