--- a/xpi/content/css/locationsearchbarw10.css
+++ b/xpi/content/css/locationsearchbarw10.css
@@ -1,21 +1,18 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
-@media (-moz-os-version: windows-win10) {
+/*@media (-moz-os-version: windows-win10) {*/
+@-moz-document url(chrome://browser/content/browser.xul) {
   
   .searchbar-textbox,
   #urlbar-wrapper,#urlbar {
     min-height: 0px !important;
     height: 24px !important;
+	font-size: 12px !important;
   }
 
-
-  window:not([chromehidden~="toolbar"]) #urlbar-wrapper {
-	  clip-path: url("chrome://browser/content/browser.xul#urlbar-back-button-clip-path") !important;
-	  margin-inline-start: calc(-1 * var(--backbutton-urlbar-overlap)) !important;
-  }
-
-  :root {
-    --backbutton-urlbar-overlap: 6px !important;
+  #main-window:not([fx55plus="true"]):not([chromehidden~="toolbar"]) #urlbar-wrapper {
+	clip-path: url("chrome://browser/content/browser.xul#urlbar-back-button-clip-path") !important;
+	margin-inline-start: -6px !important;
   }
 
   .searchbar-search-button{
@@ -32,21 +29,24 @@
 	margin-bottom: -1px !important;
   }
   
-  #forward-button:not([disabled]) > .toolbarbutton-icon {
+  #main-window:not([fx55plus="true"]) #forward-button:not([disabled]) > .toolbarbutton-icon {
     padding-top: 2px !important;
     padding-bottom: 2px !important;
     -moz-padding-start: 6px !important;
     -moz-padding-end: 3px !important;
     -moz-margin-start: 2px !important;
   }
+
   @media (max-resolution: 1.0dppx) {
-    #forward-button:not([disabled]) > .toolbarbutton-icon {
+    #main-window:not([fx55plus="true"]) #forward-button:not([disabled]) > .toolbarbutton-icon {
       max-width: unset !important;
     }
   }
+  
   @media (min-resolution: 1.1dppx) {
     #identity-icon-labels label {
       margin-top: -2px !important;
     }
   }
+
 }
