--- a/xpi/content/css/locationsearchbarw10.css
+++ b/xpi/content/css/locationsearchbarw10.css
@@ -1,10 +1,9 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
-/*@media (-moz-os-version: windows-win10) {*/
 @-moz-document url(chrome://browser/content/browser.xul) {
-  
+
   .searchbar-textbox,
-  #urlbar-wrapper,#urlbar {
+  #urlbar-wrapper, #urlbar {
     min-height: 0px !important;
     height: 24px !important;
 	font-size: 12px !important;
@@ -12,23 +11,24 @@
 
   #main-window:not([fx55plus="true"]):not([chromehidden~="toolbar"]) #urlbar-wrapper {
 	clip-path: url("chrome://browser/content/browser.xul#urlbar-back-button-clip-path") !important;
-	margin-inline-start: -6px !important;
+	margin-inline-start: -7px !important;
   }
 
   .searchbar-search-button{
     padding: unset !important;
     margin: 0 2px !important;
   }
+
   .search-go-button{
     margin: -1px -2px !important;
   }
-  
+
   #connection-icon,
   #identity-icon{
 	margin-top: -2px !important;
 	margin-bottom: -1px !important;
   }
-  
+
   #main-window:not([fx55plus="true"]) #forward-button:not([disabled]) > .toolbarbutton-icon {
     padding-top: 2px !important;
     padding-bottom: 2px !important;
@@ -42,11 +42,15 @@
       max-width: unset !important;
     }
   }
-  
+
   @media (min-resolution: 1.1dppx) {
     #identity-icon-labels label {
       margin-top: -2px !important;
     }
+  }
+ 
+  #main-window[fx55plus="true"] #nav-bar #bookmarks-menu-button[cui-areatype="toolbar"]:not([overflowedItem=true]) > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
+	margin: -1px 0 !important;
   }
 
 }
