--- a/xpi/content/css/navbar_compact2.css
+++ b/xpi/content/css/navbar_compact2.css
@@ -11,5 +11,15 @@
 	  padding-top: 7px !important;
 	  padding-bottom: 7px !important;
 	}
+	
+	#main-window[fx55plus="true"] #nav-bar-customization-target > toolbaritem:not(#search-container):not(#urlbar-container) toolbarbutton,
+	#main-window[fx55plus="true"] #nav-bar-customization-target > toolbarbutton toolbarbutton,
+	#main-window[fx55plus="true"] #nav-bar-customization-target > toolbarbutton > dropmarker,
+	#main-window[fx55plus="true"] #nav-bar-customization-target > #bookmarks-menu-button .toolbarbutton-menubutton-dropmarker,
+	#main-window[fx55plus="true"] #nav-bar-customization-target > toolbarbutton,
+	#main-window[fx55plus="true"] #nav-bar-overflow-button {
+	  padding-top: 2px !important;
+	  padding-bottom: 2px !important;
+	}
 
 }
