--- a/xpi/content/css/win8/smallnavbutextra.css
+++ b/xpi/content/css/win8/smallnavbutextra.css
@@ -330,6 +330,12 @@
 		.searchbar-textbox{
 		  min-height: 24px !important;
 		  height: 24px !important;
+		  font-size: 12px !important;
+		}
+		
+		#main-window[fx55plus="true"] #nav-bar-customization-target{
+		  margin-top:1px;
+		  margin-bottom:1px;
 		}
 
 		#urlbar{
