--- a/xpi/content/css/back-forward.css
+++ b/xpi/content/css/back-forward.css
@@ -43,8 +43,8 @@
 	  margin-bottom:1px;
 	}
 	
-	#main-window[fx55plus="true"] #nav-bar-customization-target{
+	/*#main-window[fx55plus="true"] #nav-bar-customization-target{
 	  margin-top:1px;
 	  margin-bottom:1px;
-	}
+	}*/
 }
