--- a/xpi/content/css/alt_addonsmanager.css
+++ b/xpi/content/css/alt_addonsmanager.css
@@ -9,7 +9,7 @@
 
 	@media (-moz-os-version: windows-win7), (-moz-os-version: windows-vista){
 	  @media (-moz-windows-theme:aero) {
-	    #addons-page {
+	    #addons-page:not([fx55plus="true"]) {
 		  background: linear-gradient(to bottom right, #edf6ff,#dbeaf9,#edf6ff,#dbeaf9) !important;
 	    }
 	  }
