--- a/xpi/content/css/winaero/classictabsextra2.css
+++ b/xpi/content/css/winaero/classictabsextra2.css
@@ -101,86 +101,87 @@
 	.tabbrowser-tab[selected=true]:-moz-lwtheme {
 	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.46) 50%) !important;
 	}
+
+
+	.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme) {
+	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.4) 50%),
+						linear-gradient(-moz-dialog, -moz-dialog);
+	}
+
+	.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
+	  background-image: linear-gradient(transparent,transparent) !important;
+	}
+
+	.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
+	  background-image: linear-gradient(transparent,transparent) !important;
+	}
+		
+	#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color][selected="true"]:not(:-moz-lwtheme) {
+	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.4) 50%),
+						linear-gradient(-moz-dialog, -moz-dialog) !important;
+	}
+	#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color]:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
+	  background-image: linear-gradient(transparent,transparent) !important;
+	}
+	#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color]:not([selected="true"]):hover:not(:-moz-lwtheme) {
+	  background-image: linear-gradient(transparent,transparent) !important;
+	}
+		
+	.tabs-newtab-button:not(:-moz-lwtheme) {
+	  background-image: linear-gradient(transparent,transparent) !important;
+	}
+
+	.tabs-newtab-button:hover:not(:-moz-lwtheme) {
+	  background-image: linear-gradient(transparent,transparent) !important;
+	}
+		
+	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
+	  background-size: 100% 100% !important;
+	  background-image: none !important;
+	}
+		
+	.tabs-newtab-button:not(:-moz-lwtheme):not(#privateTab-afterTabs-openNewPrivateTab),
+	#TabsToolbar > #new-tab-button:not(:-moz-lwtheme) {
+	  list-style-image: url(chrome://browser/skin/tabbrowser/newtab.svg) !important;
+	}
 	
 	/* for Windows Aero Theme (AeroBasic/AeroGlass - Vista/7) */
 	@media all and (-moz-windows-theme:aero) {
-		.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme) {
+		#main-window:not([fx55plus="true"]) .tabbrowser-tab[selected="true"]:not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to top,#eaf2fb,#eef5fc,#fbfdff);
 		}
-		.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
+		#main-window:not([fx55plus="true"]) .tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
 		  background-image: linear-gradient(transparent,transparent) !important;
 		}
-		.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
+		#main-window:not([fx55plus="true"]) .tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
 		  background-image: linear-gradient(transparent,transparent) !important;
 		}
-		#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color][selected="true"]:not(:-moz-lwtheme) {
+		#main-window:not([fx55plus="true"])[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color][selected="true"]:not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to top,#eaf2fb,#eef5fc,#fbfdff) !important;
 		}
-		#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color]:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
+		#main-window:not([fx55plus="true"])[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color]:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
 		  background-image: linear-gradient(transparent,transparent) !important;
 		}
-		#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color]:not([selected="true"]):hover:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(transparent,transparent) !important;
-		}
-		
-		.tabs-newtab-button:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(transparent,transparent) !important;
-		}
-		.tabs-newtab-button:hover:not(:-moz-lwtheme) {
+		#main-window:not([fx55plus="true"])[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color]:not([selected="true"]):hover:not(:-moz-lwtheme) {
 		  background-image: linear-gradient(transparent,transparent) !important;
 		}
 		
-		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
+		#main-window:not([fx55plus="true"]) .tabs-newtab-button:not(:-moz-lwtheme) {
+		  background-image: linear-gradient(transparent,transparent) !important;
+		}
+		#main-window:not([fx55plus="true"]) .tabs-newtab-button:hover:not(:-moz-lwtheme) {
+		  background-image: linear-gradient(transparent,transparent) !important;
+		}
+		
+		#main-window:not([fx55plus="true"]) .tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
 		  background-size: 100% 100% !important;
 		  background-image: none !important;
 		}
 	}
 	
 	/* for Windows Classic Theme on WinVista/7 */
-	@media not all and (-moz-windows-theme:aero) {
-   	
-		.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.4) 50%),
-							linear-gradient(-moz-dialog, -moz-dialog);
-		}
+	/*@media not all and (-moz-windows-theme:aero) {
 
-		.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-		  background-image: linear-gradient(transparent,transparent) !important;
-		}
-
-		.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(transparent,transparent) !important;
-		}
-		
-		#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color][selected="true"]:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.4) 50%),
-							linear-gradient(-moz-dialog, -moz-dialog) !important;
-		}
-		#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color]:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-		  background-image: linear-gradient(transparent,transparent) !important;
-		}
-		#main-window[fx50plus="true"] .tabbrowser-tab[usercontextid][data-identity-color]:not([selected="true"]):hover:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(transparent,transparent) !important;
-		}
-		
-		.tabs-newtab-button:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(transparent,transparent) !important;
-		}
-
-		.tabs-newtab-button:hover:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(transparent,transparent) !important;
-		}
-		
-		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
-		  background-size: 100% 100% !important;
-		  background-image: none !important;
-		}
-		
-		.tabs-newtab-button:not(:-moz-lwtheme):not(#privateTab-afterTabs-openNewPrivateTab),
-		#TabsToolbar > #new-tab-button:not(:-moz-lwtheme) {
-		  list-style-image: url(chrome://browser/skin/tabbrowser/newtab.svg) !important;
-		}
-
-    }
+    }*/
 	
 }
