--- a/xpi/content/css/winaero/classictabsextrac2.css
+++ b/xpi/content/css/winaero/classictabsextrac2.css
@@ -4,29 +4,25 @@
 
 	/* tab colors */
 
-		.tabs-newtab-button:not(:-moz-lwtheme),
-		.tabbrowser-tab:not(:-moz-lwtheme) .tab-content {
-		  background-image: linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
-							linear-gradient(-moz-dialog, -moz-dialog) !important;
-		}
-		.tabs-newtab-button:hover:not(:-moz-lwtheme),
-		.tabbrowser-tab:not([selected]):hover:not(:-moz-lwtheme) .tab-content {
-		  background-image: linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
-							linear-gradient(-moz-dialog, -moz-dialog) !important;
-		}
-		.tabbrowser-tab[selected]:not(:-moz-lwtheme) .tab-content {
-		  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.4) 50%),
-							linear-gradient(-moz-dialog, -moz-dialog) !important;
-		}
-		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):not(:hover),
-		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):hover {
-		  color: black !important;
-		}
+	.tabs-newtab-button:not(:-moz-lwtheme),
+	.tabbrowser-tab:not(:-moz-lwtheme) .tab-content {
+	  background-image: linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
+						linear-gradient(-moz-dialog, -moz-dialog) !important;
+	}
+	.tabs-newtab-button:hover:not(:-moz-lwtheme),
+	.tabbrowser-tab:not([selected]):hover:not(:-moz-lwtheme) .tab-content {
+	  background-image: linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
+						linear-gradient(-moz-dialog, -moz-dialog) !important;
+	}
+	.tabbrowser-tab[selected]:not(:-moz-lwtheme) .tab-content {
+	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.4) 50%),
+						linear-gradient(-moz-dialog, -moz-dialog) !important;
+	}
+	.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):not(:hover),
+	.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):hover {
+	  color: black !important;
+	}
 		
-		.tabs-newtab-button:not(:-moz-lwtheme):not(#privateTab-afterTabs-openNewPrivateTab),
-		#TabsToolbar > #new-tab-button:not(:-moz-lwtheme) {
-		  list-style-image: url(chrome://browser/skin/tabbrowser/newtab.svg) !important;
-		}
 
 	@media all and (-moz-windows-theme:aero) {
 		#main-window:not([fx55plus="true"]) .tabs-newtab-button:not(:-moz-lwtheme),
@@ -42,32 +38,12 @@
 		}
 	}
 	
-	/*@media all and (-moz-windows-classic) {
-		.tabs-newtab-button:not(:-moz-lwtheme),
-		.tabbrowser-tab:not(:-moz-lwtheme) .tab-content {
-		  background-image: linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
-							linear-gradient(-moz-dialog, -moz-dialog) !important;
-		}
-		.tabs-newtab-button:hover:not(:-moz-lwtheme),
-		.tabbrowser-tab:not([selected]):hover:not(:-moz-lwtheme) .tab-content {
-		  background-image: linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
-							linear-gradient(-moz-dialog, -moz-dialog) !important;
-		}
-		.tabbrowser-tab[selected]:not(:-moz-lwtheme) .tab-content {
-		  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.4) 50%),
-							linear-gradient(-moz-dialog, -moz-dialog) !important;
-		}
-		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):not(:hover),
-		.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):hover {
-		  color: black !important;
-		}
-		
+	@media all and (-moz-windows-classic) {	
 		.tabs-newtab-button:not(:-moz-lwtheme):not(#privateTab-afterTabs-openNewPrivateTab),
 		#TabsToolbar > #new-tab-button:not(:-moz-lwtheme) {
 		  list-style-image: url(chrome://browser/skin/tabbrowser/newtab.svg) !important;
 		}
-
-	}*/
+	}
 
 	/* tab colors lightweight theme */
 	.tabbrowser-tab[selected]:-moz-lwtheme .tab-content {
