--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -53,7 +53,10 @@
 #ctraddon_pw_tab_ctabheight,
 #ctraddon_pw_tabMinWidth,
 #ctraddon_pw_tabMaxWidth,
-#ctraddon_pw_tabClipWidth{
+#ctraddon_pw_tabClipWidth,
+#ctraddon_pw_tab_fontsize,
+#ctraddon_pw_lb_fontsize.
+#ctraddon_pw_sb_fontsize{
   width:60px !important;
   max-width:80px !important;
 }
