--- a/xpi/content/css/winaero/tabsontop_offextra.css
+++ b/xpi/content/css/winaero/tabsontop_offextra.css
@@ -65,8 +65,12 @@
 	    }
 	}
 	
+	#main-window[defaultfxtheme="true"] #TabsToolbar:not(:-moz-lwtheme) {
+	  background: -moz-Dialog !important;
+	}
+	
 	@media all and (-moz-windows-theme:aero) {
-		#main-window[defaultfxtheme="true"] #TabsToolbar:not(:-moz-lwtheme) {
+		#main-window:not([fx55plus="true"])[defaultfxtheme="true"] #TabsToolbar:not(:-moz-lwtheme) {
 		  background: #dbeaf9 !important;
 		}
 	    #main-window[defaultfxtheme="true"][tabsontop="false"]:not([developertheme="true"]) #TabsToolbar:not(:-moz-lwtheme) {
@@ -74,12 +78,12 @@
 	    }
 	}
 	
-	@media not all and (-moz-windows-theme:aero) {
+	/*@media not all and (-moz-windows-theme:aero) {
 
 		#main-window[defaultfxtheme="true"] #TabsToolbar:not(:-moz-lwtheme) {
 		  background: -moz-Dialog !important;
 		}
-	}
+	}*/
 	
 	@media all and (-moz-windows-glass) {	
 	    #main-window[defaultfxtheme="true"][tabsontop="false"][sizemode="normal"]  #TabsToolbar:not(:-moz-lwtheme) {
