--- a/xpi/content/css/win8/classictabsextra.css
+++ b/xpi/content/css/win8/classictabsextra.css
@@ -138,6 +138,16 @@
 		border-top: 1px solid rgba(0,0,0,.2) !important;
         margin-top: -2px !important;
 	  }
+	  #main-window[fx55plus="true"][defaultfxtheme="true"] #TabsToolbar:not(:-moz-lwtheme) .tabbrowser-tab{
+		color: black !important;
+	  }
+	  #main-window[fx55plus="true"][defaultfxtheme="true"] #TabsToolbar:not(:-moz-lwtheme) .tabbrowser-tab .tab-label{
+		opacity: 1.0 !important;
+	  }
+	  #main-window[fx55plus="true"][defaultfxtheme="true"] .tabs-newtab-button:not(:-moz-lwtheme):not(#privateTab-afterTabs-openNewPrivateTab),
+	  #main-window[fx55plus="true"][defaultfxtheme="true"] #TabsToolbar > #new-tab-button:not(:-moz-lwtheme) {
+		list-style-image: url(chrome://browser/skin/tabbrowser/newtab.svg) !important;
+	  }
 	}
 	
 	#TabsToolbar #tabbrowser-tabs .tabs-newtab-button:-moz-lwtheme,
