--- a/xpi/content/css/locationsearchbarw10.css
+++ b/xpi/content/css/locationsearchbarw10.css
@@ -2,8 +2,9 @@
 
 @-moz-document url(chrome://browser/content/browser.xul) {
 
-  .searchbar-textbox,
-  #urlbar-wrapper, #urlbar {
+  :root:not([uidensity=compact]) .searchbar-textbox,
+  :root:not([uidensity=compact]) #urlbar-wrapper,
+  :root:not([uidensity=compact]) #urlbar {
     min-height: 0px !important;
     height: 24px !important;
 	font-size: 12px !important;
@@ -14,17 +15,17 @@
 	margin-inline-start: -7px !important;
   }
 
-  .searchbar-search-button{
+  :root:not([uidensity=compact]) .searchbar-search-button{
     padding: unset !important;
     margin: 0 2px !important;
   }
 
-  .search-go-button{
+  :root:not([uidensity=compact]) .search-go-button{
     margin: -1px -2px !important;
   }
 
-  #connection-icon,
-  #identity-icon{
+  :root:not([uidensity=compact]) #connection-icon,
+  :root:not([uidensity=compact]) #identity-icon{
 	margin-top: -2px !important;
 	margin-bottom: -1px !important;
   }
@@ -44,12 +45,12 @@
   }
 
   @media (min-resolution: 1.1dppx) {
-    #identity-icon-labels label {
+    :root:not([uidensity=compact]) #identity-icon-labels label {
       margin-top: -2px !important;
     }
   }
  
-  #main-window[fx55plus="true"] #nav-bar #bookmarks-menu-button[cui-areatype="toolbar"]:not([overflowedItem=true]) > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
+  :root:not([uidensity=compact]) #main-window[fx55plus="true"] #nav-bar #bookmarks-menu-button[cui-areatype="toolbar"]:not([overflowedItem=true]) > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
 	margin: -1px 0 !important;
   }
 
