--- a/xpi/content/css/hideurlbarrelstop.css
+++ b/xpi/content/css/hideurlbarrelstop.css
@@ -3,6 +3,8 @@
 
 	/* hide urlbars stop/reload buttons */
 	#main-window[fx55plus="true"] #urlbar-container #stop-reload-button,
+	#urlbar-container #reload-button,
+	#urlbar-container #stop-button,
 	#urlbar-container #urlbar-reload-button,
 	#urlbar-container #urlbar-stop-button{
 	  visibility: collapse !important;
