--- a/xpi/content/css/hideurlbarrelstopgo.css
+++ b/xpi/content/css/hideurlbarrelstopgo.css
@@ -1,6 +1,7 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 @-moz-document url(chrome://browser/content/browser.xul){
-
+	#urlbar-container #reload-button,
+	#urlbar-container #stop-button,
 	#urlbar-go-button,
 	#urlbar-reload-button,
 	#urlbar-stop-button {
