--- a/xpi/content/css/mode_icons_big.css
+++ b/xpi/content/css/mode_icons_big.css
@@ -398,16 +398,26 @@
 	  max-width: unset !important;
 	}
 	
-	/* Fx45 fix */
-	#main-window[defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
+	/* Fx fixes */
+	#main-window:not([fx54plus="true"])[defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
 	  -moz-padding-start: 4px !important;
 	  -moz-padding-end: 5px !important;
 	}
 	
-	#identity-icon,
-	#tracking-protection-icon,
-	#connection-icon {
+	#main-window:not([fx54plus="true"]) #identity-icon,
+	#main-window:not([fx54plus="true"]) #tracking-protection-icon,
+	#main-window:not([fx54plus="true"]) #connection-icon {
 	  min-height: 16px !important;
+	}
+	
+	#main-window[fx54plus="true"] #urlbar-container #urlbar-wrapper #forward-button[disabled] + #urlbar #identity-icon {
+	  -moz-margin-start: -6px !important;
+	}
+	
+	#main-window[fx54plus="true"] #urlbar-container #urlbar-wrapper #forward-button[disabled] + #urlbar *,
+	#main-window[fx54plus="true"] #urlbar-container #urlbar-wrapper #forward-button {
+	  transition-property: none !important;
+      transition-duration: 0ms !important;
 	}
 	
 	/* Auto Form add-ons icon sizes*/
