--- a/xpi/content/css/appbutton2wt.css
+++ b/xpi/content/css/appbutton2wt.css
@@ -125,6 +125,15 @@
 		  margin-top: 2px !important;
 		}
 		
+		#main-window[fx56plus="true"][tabsintitlebar][chromehidden~="menubar"][sizemode="normal"]:not([tabsontop="false"]) #toolbar-menubar ~ #TabsToolbar,
+		#main-window[fx56plus="true"][tabsintitlebar][sizemode="normal"]:not([tabsontop="false"]) #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar {
+		  -moz-margin-start: 97px;
+		}
+		
+		#main-window[fx56plus="true"][tabsintitlebar][sizemode="normal"] #TabsToolbar .titlebar-placeholder{
+		  visibility: visible !important;
+		}
+		
 	}
 	
 	/* for LavaFox themes */
