--- a/xpi/content/css/appbutton2wt2.css
+++ b/xpi/content/css/appbutton2wt2.css
@@ -67,6 +67,15 @@
 	  -moz-margin-start: 97px;
 	}
 	
+	@media (-moz-os-version: windows-win10) {
+	
+		#main-window[fx56plus="true"][tabsintitlebar][chromehidden~="menubar"][sizemode="normal"]:not([tabsontop="false"]) #toolbar-menubar ~ #TabsToolbar,
+		#main-window[fx56plus="true"][tabsintitlebar][sizemode="normal"]:not([tabsontop="false"]) #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar {
+		  -moz-margin-start: 97px;
+		}
+		
+	}
+	
 	
 	#main-window:not([tabsintitlebar])[tabsontop="false"] #titlebar-buttonbox-container{
 	  -moz-appearance: none !important;
